--- a/src/css/styless.css
+++ b/src/css/styless.css
@@ -1,4 +1,4 @@
-body,html{
+*{
 padding: 0;
 margin: 0;
 }
@@ -6,12 +6,32 @@ margin: 0;
     padding-left: 5%;
     align-items: center;
 }
-.card-size{
-    width: 17rem;
+.underline::after{
+    content: "";
+    display: block;
+    height: 2px;
+    background-color: #fff;
+    transform: scale(0,1);
+    transform-origin: center;
+    transition: transform .2s;
+}
+.underline:hover::after{
+    transform: scale(1,1);
+}
+
+.box-effect{
+    box-shadow: 6px 6px 6px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 6px 6px 6px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 6px 6px 0px rgba(0,0,0,0.75);
 }
 .center-text{
     text-align: center;
 }
-.position{
-    z-index: 1;
+@media (max-width: 978px) {
+    #carousel-img{
+        height: 200px;
+    }
+    .box-effect{
+        margin-bottom: 10px ;
+    }
 }
