--- a/src/css/styless.css
+++ b/src/css/styless.css
@@ -15,6 +15,12 @@ margin: 0;
     transform-origin: center;
     transition: transform .2s;
 }
+.social-icon{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    font-size: 30px;
+}
 .underline:hover::after{
     transform: scale(1,1);
 }
