--- a/src/css/styless.css
+++ b/src/css/styless.css
@@ -20,7 +20,21 @@ margin: 0;
     margin: 0;
     list-style: none;
     font-size: 30px;
+    color: #33adff;
+
 }
+.social-icon:hover{
+     background: #1aa3ff;
+     padding: 5px;
+     border-radius: 5px;
+     color: #fff;
+}
+ .service-card:hover{
+    box-shadow: 1px 1px 25px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 25px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 25px 0px rgba(0,0,0,0.75);
+    padding: 2%;
+ }
 .underline:hover::after{
     transform: scale(1,1);
 }
