--- a/src/css/styless.css
+++ b/src/css/styless.css
@@ -80,3 +80,16 @@ margin: 0;
         padding-top: 0.2%;
     }
 }
+
+.carousel-caption-title{
+    font-family: inherit;
+    color: #fff;
+    font-weight: 100;
+    -webkit-font-smoothing: antialiased!important;
+
+}
+.text-transparent{
+    background: black;
+    opacity: 60%;
+    
+}
